--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sticky",
-  "version": "5.0.5",
+  "version": "5.0.6-vst.0",
   "description": "Sticky component for React",
   "main": "lib/index.js",
   "scripts": {
